add input and button and console log

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/home.css">
-    <title>Document</title>
+    <title>FizzBuzz</title>
 </head>
 
 <body>
@@ -20,7 +20,9 @@
     </header>
     <main>
         <section class="main-section">
-            
+            <input id="input"/>
+            <button id="button">FizzBuzz Me!</button>
+
         </section>
     </main>
     <footer>
