created resultSpan which updates per user input

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section class="main-section">
             <input id="input"/>
             <button id="button">FizzBuzz Me!</button>
-
+            <span id="output"></span>
         </section>
     </main>
     <footer>
